--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@zidian/web-theme": "^0.1.0-alpha.7",
+    "clsx": "^2.1.1",
     "next": "15.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
