--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material/material-color-utilities": "^0.3.0",
+    "@tailwindcss/postcss": "^4.1.10",
     "@zidian/web-theme": "^0.1.0-alpha.7",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
