--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/postcss": "^4.1.10",
     "@zidian/web-theme": "^0.1.0-alpha.7",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.3",
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
     "react": "^19.0.0",
